# fastapi-json-project1

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
serials-catalog/: alembic.ini  main.py
serials-catalog/alembic/: env.py
serials-catalog/alembic/versions/: 2025_03_24_1730-45ec43738d19_create_serials_table.py
serials-catalog/core/: config.py
serials-catalog/models/: __init__.py  serial.py
